syntax = "proto3";

package chatweb;

service ChatWebService {
  rpc ChatWebUnary(ChatWebUnaryRequest) returns (ChatWebUnaryResponse) {};
  rpc ChatWebServerSideStream(ChatWebServerSideStreamRequest) returns (stream ChatWebServerSideStreamResponse) {};
}

message Status {
  int32 code = 1;
  string message = 2;
  string details = 3;
}

message ChatWebUnaryRequest {
  string id = 1;
  string message = 2;
}

message ChatWebUnaryResponse {
  string id = 1;
  string message = 2;
}

message ChatWebServerSideStreamRequest {
  string username = 1;
}

message ChatWebServerSideStreamResponse {
  string id = 1;
  string message = 2;
  Status error = 3;
}